--- a/src/app/font-change/font-change.component.html
+++ b/src/app/font-change/font-change.component.html
@@ -7,4 +7,4 @@
 <!-- <button type="button" (click)="fontUp()">Font up</button> -->
 <!-- <p>Count change:{{fontSize}}</p> -->
 <p [style.fontSize.px]="fontSize" class="text-danger">This is paragraph</p>
-<a class="btn btn-danger" routerLink="">Back</a>
+<!-- <a class="btn btn-danger" routerLink="">Back</a> -->
