--- a/src/app/pet-info/pet-info.component.html
+++ b/src/app/pet-info/pet-info.component.html
@@ -9,4 +9,4 @@
 </div>
 <p style="font-size: 20px;" [style.color]="color1"><strong>Pet name:</strong> {{petName}}</p>
 <img [src]="petImage" alt="No image" style="width: 600px; height: 400px;">
-<a class="btn btn-danger" routerLink="">Back</a>
+<!-- <a class="btn btn-danger" routerLink="">Back</a> -->
