--- a/src/app/color-select/color-select.component.html
+++ b/src/app/color-select/color-select.component.html
@@ -19,4 +19,4 @@
   </div>
   <!-- <button type="button" class="btn btn-danger" (click)="newColor()">Change color to orange</button> -->
 </div>
-<a class="btn btn-danger" routerLink="">Back</a>
+<!-- <a class="btn btn-danger" routerLink="">Back</a> -->
