--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -39,9 +39,9 @@
       <td>{{user.address}}</td>
       <td [hidden]="hidden">{{user.email}}</td>
       <td><button type="button" class="btn btn-primary" (click)="edit(user.id)" >Update</button></td>
-      <td><button type="button" class="btn btn-danger" (click)="deleteUser(user.id)">Delete</button></td>
+      <td><button type="button" class="btn btn-danger" (click)="deleteUser(user.id)"><span data-feather="trash-2"></span>Delete</button></td>
     </tr>
   </tbody>
 </table>
 <button type="button" class="btn btn-info" (click)="showHide()">Show/Hide Email</button>
-<a class="btn btn-danger" routerLink="">Back</a>
+<!-- <a class="btn btn-danger" routerLink="">Back</a> -->
